--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,8 @@
-<footer class="bg-light page-footer font-small fixed-bottom">
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      Nathan
-    </div>
-    <!-- Copyright -->
+<footer [ngClass]="{ 'bg-light page-footer font-small ': true, 
+                    'fixed-bottom' : !isMobile }">
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    Nathan
+  </div>
+  <!-- Copyright -->
 </footer>
