--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,12 +6,12 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        
+
 
         <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-0 shadow">
                 <div class="card-body text-center">
-                    <a class="nav-link" routerLink="books" >Books </a>
+                    <a class="nav-link" routerLink="books">Books </a>
                     <div class="card-text text-black-50 mb-2">Library of book </div>
                 </div>
             </div>
@@ -20,8 +20,27 @@
         <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-0 shadow">
                 <div class="card-body text-center">
-                    <a class="nav-link" routerLink="films"  >Films </a>
+                    <a class="nav-link" routerLink="films">Films </a>
                     <div class="card-text text-black-50 mb-2">List films to search</div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <div class="card-body text-center">
+                    <a class="nav-link" routerLink="blog">Blog </a>
+                    <div class="card-text text-black-50 mb-2">blog online</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <div class="card-body text-center">
+                    <a class="nav-link" routerLink="product">Product </a>
+                    <div class="card-text text-black-50 mb-2">sale of product</div>
                 </div>
             </div>
         </div>
@@ -34,6 +53,8 @@
                 </div>
             </div>
         </div>
+
+
 
     </div>
 </div>
